# object-detection

./: .gitignore  BROWSER_CAMERA_SOLUTION.md  BUG_FIX_BROWSER_CAMERA.md  CAMERA_DEBUG_FIX.md  CAMERA_DEPLOYMENT_OPTIONS.md  COLOR_LABELS_GUIDE.md  COLOR_VIDEO_FIX.md  CORS_FIX_COMPLETE.md  DEFINITIVE_LIVE_FEED_FIX.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_LIMITATIONS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  FILE_STRUCTURE_DEPLOYMENT.md  FINAL_RENDER_FIX.md  FOLDER_STRUCTURE.md  FPS_ZERO_DIAGNOSTIC.md  HOW_TO_RUN.md  LAG_FIX_AND_FPS_OPTIMIZATION.md  LIVE_FEED_FIX.md  LOCAL_BACKEND_GUIDE.md  METRICS_FIX_COMPLETE.md  ORGANIZATION_COMPLETE.md  ORGANIZATION_SUMMARY.md  PYTHON_313_FIX.md  QUICK_DEPLOY.md  QUICK_FIX_RENDER.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  RENDER_404_FIX.md  RENDER_DEPLOYMENT_FIX.md  RENDER_FIX.md  SAVEFRAME_FIX.md  URGENT_FPS_SAVEFRAME_FIX.md  WEBRTC_CAMERA_GUIDE.md  WHY_CAMERA_DOESNT_WORK.md  (+7 more)
archive/: CMakeLists.txt  build_accelerator.bat  detection.py  requirements.txt  track.py
archive/src/: detection_utils.cpp  image_processor.cpp  python_bindings.cpp
backend/: .env.example  app.py  requirements.txt  vercel.json  wsgi.py
docs/: ARCHITECTURE.md  COLOR_FIX.md  COMPLETION_SUMMARY.md  DETECTION_GUIDE.md  FINAL_OPTIMIZATIONS.md  FULLSTACK_README.md  GETTING_STARTED.md  IMPROVEMENTS.md  LIMITATIONS_AND_SOLUTIONS.md  MOBILE_OPTIMIZATION.md  OPTIMIZATION_GUIDE.md  PROJECT_SUMMARY.md  README_ACCELERATION.md  README_OLD.md  SCREEN_LAYOUT.md  SIMPLE_GUIDE.md  SMOOTH_OPERATION.md  SMOOTH_STREAMING.md  SMOOTH_VIDEO_COLORFUL_LABELS.md  VISUAL_METRICS_GUIDE.md
frontend/: .env.example  .env.production  package.json  vercel.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Controls.css  Controls.js  Dashboard.css  Dashboard.js  LiveFeed.css  LiveFeed.js  MetricsPanel.css  MetricsPanel.js  Particles.css  Particles.js  SavedFrames.css  SavedFrames.js
